--- a/app.wxss
+++ b/app.wxss
@@ -154,6 +154,7 @@ checkbox-group, radio-group {
   font-size: 20px;
   background-color: #56c2b5 !important;
   color: rgb(255, 255, 255) !important;
+  text-align: center;
 }
 
 .picker1 {
