--- a/pages/job/job.wxss
+++ b/pages/job/job.wxss
@@ -1,21 +1,10 @@
-.view3 {
+.wx-view_tjO99k {
   display: flex;
   margin-top: 7%;
-  justify-content: center;
-  align-items: center;
+  margin-left:20px;
 }
 
-.view4 {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin-left: 20px;
-  margin-bottom: 0px;
-  padding-bottom: 0%;
-}
-
-.image1 {
+.wx-image_9QcDYY {
   width: 50px;
   height: 50px;
   border-bottom-right-radius: 90px;
@@ -24,39 +13,36 @@
   border-top-left-radius: 90px;
 }
 
-.view5 {
+.wx-view_fZ3DYR {
   display: flex;
+  flex-direction: column;
+  padding-top: 8px;
+  padding-left:15px;
 }
 
-.text4 {
+.wx-text_nbmddV {
+  width: 150px;
   font-size: 13px;
   font-weight: bolder;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space:nowrap;
   overflow: hidden;
-}
-
-.text5 {
-  font-size: 13px;
-  color: rgb(43, 217, 196);
   text-overflow: ellipsis;
-  white-space: nowrap;
+}
+
+.wx-text_FzC6ry {
+  width: 150px;
+  font-size: 11px;
+  white-space:nowrap;
   overflow: hidden;
-  margin-left: 10px;
+  text-overflow: ellipsis;
 }
 
-.text6 {
-  font-size: 13px;
-}
-
-.match {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 16px;
-}
-
-.percent {
-  font-size: 15px;
+.wx-text_v0uVdd {
   font-weight: bolder;
+  font-size: 13px;
+  align-self: center;
+  width: 90px;
+  white-space:nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
