modify the style

--- a/pages/ResumeCollected/ResumeCollected.wxml
+++ b/pages/ResumeCollected/ResumeCollected.wxml
@@ -16,4 +16,4 @@
   <button class="wx-button_i32LFg" hover-class="button-hover" size="default" type="default">PASS</button>
   <button class="wx-button_tXrSg7" hover-class="button-hover" size="default" type="default">收藏</button>
 </view>
-<view class="wx-view_Wc0Cz2">查看已收藏简历</view>
+<view class="wx-view_Wc0Cz2" bindtap="toResumeDetail">查看已收藏简历</view>
