--- a/pages/ResumeCollected/resumeDetail.wxss
+++ b/pages/ResumeCollected/resumeDetail.wxss
@@ -1,5 +1,5 @@
-.body_D26OWn {
-  background-color: rgba(247, 247, 247, 1);
+Page {
+  background: #f7f7f7;
 }
 
 .wx-view_UdP982 {
@@ -10,9 +10,9 @@
 .wx-view_Lqco3c {
   display: flex;
   background-color: rgb(255, 255, 255);
-  height: 70px;
+  height: 50px;
   margin-top: 0%;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
 }
 
 .wx-view_9AUqgw {
@@ -35,7 +35,7 @@
   margin-top: 1%;
 }
 
-.wx-text_APu8Dv{
+.wx-text_APu8Dv {
   font-weight: bolder;
 }
 
@@ -55,4 +55,17 @@
   border: 1px solid rgb(251, 159, 164);
   background-color: rgba(255, 255, 255, 1) !important;
   color: rgb(251, 159, 164) !important;
+}
+
+.wx-view_yXUm76 {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 10%;
+}
+
+.image100 {
+  width: 40px;
+  height: 40px;
+  border-radius: 90%;
 }
