--- a/pages/ResumeCollected/resumeDetail.wxml
+++ b/pages/ResumeCollected/resumeDetail.wxml
@@ -1,16 +1,16 @@
 <view class="wx-view_UdP982">
-  <view class="wx-view_Lqco3c">
+  <view class="wx-view_Lqco3c" wx:for="stores">
     <view class="wx-view_ECVQE3">
       <text class="c-block wx-text_APu8Dv">Limo</text>
-      <text class="c-block wx-text_D0HbG8">男/本科/市场管理专业/应届毕业生10年</text>
+      <text class="c-block wx-text_D0HbG8">{{item.sex}}/{{item.education}}/{{item.major}}/{{item.industry}}{{item.workTime}}年</text>
     </view>
     <view class="wx-view_vOdtmf">
-      <button class="wx-button_0aIIml" hover-class="button-hover" size="default" type="default" bindtap="callPhone">
+      <button class="wx-button_0aIIml" hover-class="button-hover" size="default" type="default" bindtap="callPhone" id="{{item.phone}}">
         和TA聊聊
       </button>
     </view>
   </view>
 </view>
 <view class="wx-view_yXUm76">
-  <image src="http://qty83k.creatby.com/materials/origin/a5e31a065f4ae7540d20a8a0d0cbb547_origin.PNG" class="image100"></image>
+  <image src="http://qty83k.creatby.com/materials/origin/a5e31a065f4ae7540d20a8a0d0cbb547_origin.PNG" class="image100" bindtap="toBack"></image>
 </view>
