--- a/pages/applicant/applicant.wxss
+++ b/pages/applicant/applicant.wxss
@@ -1,7 +1,3 @@
-page {
-  background-color: #fff;
-}
-
 .wx-view_bNikYL {
   display: flex;
   flex-direction: column;
@@ -10,38 +6,27 @@ page {
   margin-top: 8%;
 }
 
-.wx-view_vM1RUx {
+.wx-form_A2AT8z {
   display: flex;
-  margin-top: 5%;
+  margin-top: 6%;
+  flex-direction: column;
 }
 
-.wx-view_7OZuuf {
+.wx-view_39uYnO {
   display: flex;
-  margin-top: 1%;
+  align-items: center;
+  margin-bottom: 1%;
+  margin-left: 11%;
 }
 
-.wx-text_0lSJuj {
-  width: 30%;
-  margin-left: 5%;
-  height: 10%;
+.wx-text_psuTeR {
   font-size: 15px;
+  width: 100px;
 }
 
-.wx-input_nwEtaY {
-  height: 10%;
+.wx-input_VyXmyK {
+  height: 37.5rpx;
+  min-height: 37.5rpx;
   border: 1px solid rgb(0, 0, 0);
-  width: 50%;
-}
-
-.wx-radio-group_NMxmyK {
-  display: flex;
-  height: 10%;
-}
-
-.weui-radio-label_EXr4Jn {
-  margin-top: -4%;
-}
-
-.wx-text_yjQLdK {
-  font-size: 15px;
+  width: 375rpx;
 }
