--- a/pages/applicant/applicant.wxml
+++ b/pages/applicant/applicant.wxml
@@ -6,34 +6,83 @@
 <form class="wx-form_A2AT8z">
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">姓名</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请填写姓名" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="name" placeholder="请填写姓名" placeholder-style="font-size: 12px;" type="text" />
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">手机号</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请填写手机号" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="phone" placeholder="请填写手机号" placeholder-style="font-size: 12px;" type="number" />
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">性别</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请点击选择性别" placeholder-style="font-size: 12px;" type="text" />
+    <radio-group class="wx-radio-group_thc0Ck">
+      <label class="weui-radio-label_UpHum5 man">
+        <radio class="wx-radio_MPrPb5" type="radio" />
+        <text class="wx-text_CARrpa">男</text>
+      </label>
+      <label class="weui-radio-label_UpHum5 women">
+        <radio class="wx-radio_MPrPb5" type="radio" />
+        <text class="wx-text_CARrpa">女</text>
+      </label>
+    </radio-group>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">年龄</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请填写年龄" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="age" placeholder="请填写年龄" placeholder-style="font-size: 12px;" type="number" />
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">学历</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请点击选择学历" placeholder-style="font-size: 12px;" type="text" />
+    <picker class="picker1" mode="selector" range="{{educations}}" value="{{index}}" bindchange="bindPickerChange1">
+      <button class="wx-input_VyXmyK" name="education" placeholder="请点击选择学历" placeholder-style="font-size: 12px;" type="text" >{{education}}</button>
+    </picker>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">所学专业</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请填写所学专业" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="major" placeholder="请填写所学专业" placeholder-style="font-size: 12px;" type="text" />
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">工作经验</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请点击选择工作经验" placeholder-style="font-size: 12px;" type="text" />
+    <picker mode="selector" range="{{industries}}" value="{{index}}" bindchange="bindPickerChange2">
+      <input class="wx-input_VyXmyK" name="industry" placeholder="请点击选择工作经验" placeholder-style="font-size: 12px;" type="text" value="{{industry}}" />
+    </picker>
+  </view>
+  <view class=" wx-view_39uYnO ">
+    <text class="wx-text_psuTeR ">从业时间</text>
+    <input class="wx-input_VyXmyK " name="worktime" placeholder="请填写从业时间 " placeholder-style="font-size: 12px; " type="number" />
+  </view>
+  <view class="wx-view_39uYnO ">
+    <text class="wx-text_psuTeR ">期望工作类型</text>
+    <picker mode="selector" range="{{industries}}" value="{{index}}" bindchange="bindPickerChange3">
+      <input class="wx-input_VyXmyK " name="expectType" placeholder="请选择期望工作类型" placeholder-style="font-size: 12px; " type="text" value="{{expectType}}" />
+    </picker>
   </view>
   <view class="wx-view_39uYnO">
-    <text class="wx-text_psuTeR">从业时间</text>
-    <input class="wx-input_VyXmyK" name="input1" placeholder="请填写从业时间" placeholder-style="font-size: 12px;" type="text" />
+    <text class="wx-text_psuTeR">期望工作地点</text>
+    <picker mode="selector" range="{{expectAddres}}" value="{{index}}" bindchange="bindPickerChange4">
+      <input class="wx-input_VyXmyK" name="expectAddr" placeholder="请选择期望工作地点" placeholder-style="font-size: 12px;" type="text" value="{{expectAddr}}" />
+    </picker>
   </view>
+  <view class="wx-view_39uYnO">
+    <text class="wx-text_6pytKT">是否接受外地工作</text>
+    <radio-group class="wx-radio-group_thc0Ck">
+      <label class="weui-radio-label_UpHum5 yes">
+        <radio class="wx-radio_MPrPb5" type="radio" />
+        <text class="wx-text_CARrpa">是</text>
+      </label>
+      <label class="weui-radio-label_UpHum5 no">
+        <radio class="wx-radio_MPrPb5" type="radio" />
+        <text class="wx-text_CARrpa">否</text>
+      </label>
+    </radio-group>
+  </view>
+  <view class="wx-view_39uYnO">
+    <text class="wx-text_tlYE2o">从何种渠道了解到我们的招聘会</text>
+  </view>
+  <view class="wx-view_pL9v5l">
+    <picker mode="selector" range="{{ways}}" value="{{index}}" bindchange="bindPickerChange5">
+      <input class="wx-input_nbRzbD" name="way" placeholder="请点击选择" type="text" placeholder-style="font-size: 12px;" value="{{way}}" />
+    </picker>
+  </view>
+  <button class="wx-button_Y7AQAY" hover-class="button-hover" size="default" type="default" bindtap="commit">
+    提交资料  获得入场券
+  </button>
 </form>
