--- a/pages/applicant/applicant.wxss
+++ b/pages/applicant/applicant.wxss
@@ -28,4 +28,99 @@
   min-height: 55rpx;
   border: 1px solid rgb(0, 0, 0);
   width: 375rpx;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.wx-view_DmPvjT {
+  display: flex;
+  align-items: center;
+  margin-left: 13%;
+  justify-content: flex-start;
+  margin-bottom: 1%;
+}
+
+.wx-text_6pytKT {
+  font-size: 15px;
+}
+
+.wx-radio-group_thc0Ck {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.weui-radio-label_UpHum5 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wx-text_CARrpa {
+  font-size: 15px;
+}
+
+.wx-view_2hQ67A {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 13%;
+}
+
+.wx-text_tlYE2o {
+  font-size: 15px;
+}
+
+.wx-view_pL9v5l {
+  display: flex;
+  align-items: center;
+  margin-left: 11%;
+  margin-bottom: 5%;
+}
+
+.wx-input_nbRzbD {
+  display: flex;
+  align-items: center;
+  width: 573.75rpx;
+  height: 55rpx;
+  min-height: 55rpx;
+  border-width: 1px;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+}
+
+.wx-button_Y7AQAY {
+  width: 290px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 90px;
+  color: #fff !important;
+  background-color: rgb(86, 194, 181) !important;
+}
+
+.man {
+  margin-left: 33%;
+}
+
+.women {
+  margin-left: 30%;
+}
+
+.yes {
+  margin-left: 10%;
+}
+
+.no {
+  margin-left: 30%;
+}
+
+.picker1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 23px;
 }
