--- a/pages/applicant/applicant.wxml
+++ b/pages/applicant/applicant.wxml
@@ -6,17 +6,17 @@
 <form class="wx-form_A2AT8z">
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">姓名</text>
-    <input class="wx-input_VyXmyK" name="name" placeholder="请填写姓名" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="name" placeholder="请填写姓名" placeholder-style="font-size: 12px;text-align: center;" type="text" bindblur="checkout" data-name="1"/>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">手机号</text>
-    <input class="wx-input_VyXmyK" name="phone" placeholder="请填写手机号" placeholder-style="font-size: 12px;" type="number" />
+    <input class="wx-input_VyXmyK" name="phone" placeholder="请填写手机号" placeholder-style="font-size: 25rpx;text-align: center;" type="number" bindblur="checkout" data-name="phone"/>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">性别</text>
     <radio-group class="wx-radio-group_thc0Ck">
       <label class="weui-radio-label_UpHum5 man">
-        <radio class="wx-radio_MPrPb5" type="radio" />
+        <radio class="wx-radio_MPrPb5" type="radio" checked="true"/>
         <text class="wx-text_CARrpa">男</text>
       </label>
       <label class="weui-radio-label_UpHum5 women">
@@ -27,7 +27,7 @@
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">年龄</text>
-    <input class="wx-input_VyXmyK" name="age" placeholder="请填写年龄" placeholder-style="font-size: 12px;" type="number" />
+    <input class="wx-input_VyXmyK" name="age" placeholder="请填写年龄" placeholder-style="font-size: 25rpx;text-align: center;" type="number" bindblur="checkout" data-name="3" maxlength="2"/>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">学历</text>
@@ -37,35 +37,35 @@
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">所学专业</text>
-    <input class="wx-input_VyXmyK" name="major" placeholder="请填写所学专业" placeholder-style="font-size: 12px;" type="text" />
+    <input class="wx-input_VyXmyK" name="major" placeholder="请填写所学专业" placeholder-style="font-size: 25rpx;text-align: center;" type="text" bindblur="checkout" data-name="4"/>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">工作经验</text>
     <picker mode="selector" range="{{industries}}" value="{{index}}" bindchange="bindPickerChange2">
-      <input class="wx-input_VyXmyK" name="industry" placeholder="请点击选择工作经验" placeholder-style="font-size: 12px;" type="text" value="{{industry}}" />
+      <button class="wx-button_VyXmyK" name="industry">{{industry}}</button>
     </picker>
   </view>
   <view class=" wx-view_39uYnO ">
     <text class="wx-text_psuTeR ">从业时间</text>
-    <input class="wx-input_VyXmyK " name="worktime" placeholder="请填写从业时间 " placeholder-style="font-size: 12px; " type="number" />
+    <input class="wx-input_VyXmyK " name="worktime" placeholder="请填写从业时间 " placeholder-style="font-size: 12px; text-align: center;" type="number" bindblur="checkout" data-name="5" maxlength="2"/>
   </view>
   <view class="wx-view_39uYnO ">
     <text class="wx-text_psuTeR ">期望工作类型</text>
     <picker mode="selector" range="{{industries}}" value="{{index}}" bindchange="bindPickerChange3">
-      <input class="wx-input_VyXmyK " name="expectType" placeholder="请选择期望工作类型" placeholder-style="font-size: 12px; " type="text" value="{{expectType}}" />
+      <button class="wx-button_VyXmyK" name="expectType">{{expectType}}</button>
     </picker>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_psuTeR">期望工作地点</text>
     <picker mode="selector" range="{{expectAddres}}" value="{{index}}" bindchange="bindPickerChange4">
-      <input class="wx-input_VyXmyK" name="expectAddr" placeholder="请选择期望工作地点" placeholder-style="font-size: 12px;" type="text" value="{{expectAddr}}" />
+      <button class="wx-button_VyXmyK" name="expectAddr">{{expectAddr}}</button>
     </picker>
   </view>
   <view class="wx-view_39uYnO">
     <text class="wx-text_6pytKT">是否接受外地工作</text>
     <radio-group class="wx-radio-group_thc0Ck">
       <label class="weui-radio-label_UpHum5 yes">
-        <radio class="wx-radio_MPrPb5" type="radio" />
+        <radio class="wx-radio_MPrPb5" type="radio" checked="true"/>
         <text class="wx-text_CARrpa">是</text>
       </label>
       <label class="weui-radio-label_UpHum5 no">
@@ -79,7 +79,7 @@
   </view>
   <view class="wx-view_pL9v5l">
     <picker mode="selector" range="{{ways}}" value="{{index}}" bindchange="bindPickerChange5">
-      <input class="wx-input_nbRzbD" name="way" placeholder="请点击选择" type="text" placeholder-style="font-size: 12px;" value="{{way}}" />
+      <button class="wx-button_VyXmyK b1" name="way">{{way}}</button>
     </picker>
   </view>
   <button class="wx-button_Y7AQAY" hover-class="button-hover" size="default" type="default" bindtap="commit">
