--- a/pages/position/position.wxml
+++ b/pages/position/position.wxml
@@ -1,42 +1,14 @@
-<view class="view6">
-  <view class="view14">
-    <image class="image2" mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/55d122e1e0703553421bd7ddfe26c9dd_origin.png" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" />
-    <text class="text8">可预定</text>
-  </view>
-  <view class="view14">
-    <image class="image3" mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/dbd6e108e006d6f7ebfd9dcfef35cc56_origin.png" style="background-size:   100% 100%; background-position:   0% 0%; background-repeat:   no-repeat;" />
-    <text class="text8">已选</text>
-  </view>
-  <view class="view14">
-    <image class="image4" mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/0c98a08227987950c10e634d0d20cff2_origin.png" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" />
-    <text class="text8">已预定</text>
+<view class="wx-view_k3EMOa">
+  <image class="wx-image_lDQjhT" mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/2548e499a3a1f0baecdb97aea43b8377_origin.png" style="background-size: 100% 100%; background-position: 0% 0%; background-repeat: no-repeat;" />
+</view>
+<view class="wx-view_l4tg0N">
+  <view class="wx-view_k7sq1h" wx:for="{{seatsInfo}}" data-price="{{item.price}}" data-state="{{item.state}}" data-id="{{item.id}}" bindtap="toBuy">
+    <view class="wx-view_7naiDV">
+      <text class="wx-text_mBTXV9">{{item.id}}号展位</text>
+      <text class="wx-text_QeKmNY">{{item.price}}元</text>
+      <text class="wx-text_StQoG5" wx:if="{{item.state==1}}">尚未注册 点击购买</text>
+      <text class="wx-text_StQoG5" wx:else>智诚人力</text>
+    </view>
+    <image class="wx-image_f7WpcD" mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/55d122e1e0703553421bd7ddfe26c9dd_origin.png" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" />
   </view>
 </view>
-<view class="view12">
-  <view class="column1">
-    <view id="seat{{8-index}}" wx:for="{{seats1}}" class="seat {{index==1||index==3||index==5?'unique':''}} {{change[7-index]}}" bindtap="setToBuy">{{8-index}}</view>
-  </view>
-  <view class="column2">
-    <view id="seat{{item}}" wx:for="{{seats2}}" class="seat {{item==15||item==22?'unique':''}} {{change[item-1]}}" bindtap="setToBuy">{{item}}</view>
-  </view>
-  <view class="column3">
-    <view id="seat{{80-item}}" wx:for="{{seats3}}" class="seat {{item==36||item==43?'unique':''}} {{change[79-item]}}" bindtap="setToBuy">{{80-item}}</view>
-  </view>
-  <view class="column4">
-    <view id="seat{{item}}" wx:for="{{seats4}}" class="seat {{item==57||item==64?'unique':''}} {{change[item-1]}}" bindtap="setToBuy">{{item}}</view>
-  </view>
-  <view class="column5">
-    <view id="seat{{164-item}}" wx:for="{{seats5}}" class="seat {{item==85||item==78?'unique':''}} {{change[163-item]}}" bindtap="setToBuy">{{164-item}}</view>
-  </view>
-  <view class="column6">
-    <view id="seat{{item}}" wx:for="{{seats6}}" class="seat {{item==94||item==96||item==98?'unique':''}} {{change[item-1]}}" bindtap="setToBuy">{{item}}</view>
-  </view>
-</view>
-<view class="view13">
-  <view class="vip1 {{change[100]}}" id="seat101" bindtap="setToBuy">101</view>
-  <view class="vip2 {{change[101]}}" id="seat102" bindtap="setToBuy">102</view>
-</view>
-<image src="../../images/enter.png" class="image8"></image>
-<button class="button5" hover-class="button-hover" size="default" type="default" bindtap="confirmBuy">
-  预定展位
-</button>
