--- a/pages/position/position.wxss
+++ b/pages/position/position.wxss
@@ -1,102 +1,50 @@
-/* pages/position/position.wxss */
-
-.view12 {
+.wx-view_k3EMOa {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 4%;
+}
+
+.wx-image_lDQjhT {
   width: 100%;
+  height: 230px;
 }
 
-.view13 {
-  display: flex;
-  width: 100%;
-}
-
-.column1 {
+.wx-view_l4tg0N {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 20%;
-  margin-left:7%;
 }
 
-.column2 {
+.wx-view_k7sq1h {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 5%;
-  margin-left: 8.5%;
-  margin-right: 5%;
+  margin-bottom: 5rpx;
 }
 
-.column3 {
+.wx-view_7naiDV {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 5%;
+  margin-bottom: 5rpx;
 }
 
-.column4 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 5%;
-  margin-left: 27%;
-  margin-right: 5%;
+.wx-text_mBTXV9 {
+  font-size: 13px;
+  margin-left: 30rpx;
+  width: 170rpx;
 }
 
-.column5 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 5%;
+.wx-text_QeKmNY {
+  font-size: 13px;
+  margin-left: 50rpx;
 }
 
-.column6 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 20%;
-  margin-left:10%;
-  margin-right: 10%;
+.wx-text_StQoG5 {
+  font-size: 13px;
+  margin-left: 90rpx;
 }
 
-.seat {
-  width: 18px;
-  height: 18px;
-  background-color: #e8e8e8 !important;
-  margin-bottom: 3px;
-  color: #fff;
-  font-size: 11px;
-  text-align: center;
-}
-
-.vip1 {
-  margin-left: 20%;
-  width:55px;
-  height: 23px;
-  background-color: #e8e8e8 !important;
-  color: #fff;
-  font-size: 15px;
-  text-align: center;
-}
-
-.vip2 {
-  margin-left: 27%;
-  width:55px;
-  height: 23px;
-  background-color: #e8e8e8 !important;
-  color: #fff;
-  font-size: 15px;
-  text-align: center;
-}
-
-.unique {
-  margin-bottom: 10px;
-}
-
-.bought {
-  background-color: #fb9fa4 !important;
-}
-
-.buying {
-  background-color: #56c2b5 !important;
+.wx-image_f7WpcD {
+  width: 700rpx;
+  height: 5rpx;
+  margin-left: 20rpx;
 }
